<resources>
    <string name="app_name">RealtimeDatabase</string>
    <string name="add">ADD</string>
    <string name="enter_name">Enter name</string>
    <string name="textview">TextView</string>
    <string name="change">CHANGE</string>
    <string name="delete">DELETE</string>
    <string name="retrieve">RETRIEVE</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>

    <string name="fcm_message">FCM Message</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>

    <array name="genres">
        <item>Rock</item>
        <item>Sufi</item>
        <item>Pop</item>
        <item>Folk</item>
    </array>
</resources>
